--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -162,7 +162,7 @@ body {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 15px;
-  color: #818181;
+  color: cyan;
   display: block;
 }
 
